JBTM-3699 agroal migration to Jakarta